kubernetes/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-observatory-local
  labels:
    app.kubernetes.io/part-of: api-observatory
spec:
  ingressClassName: traefik
  rules:
    - host: ingestor.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingestor
                port:
                  number: 8000
    - host: dashboard.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 8003
